Fixed gap in-between cloud-container and main-section

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
   font-family: 'Oswald', sans-serif; }
 
 #cloud-container {
-  margin-top: -380px; }
+  margin-top: -20vw; }
 
 h1 {
   font-size: 4rem; }
